# graphics

./: CMakeLists.txt  README.md
include/colorchannels/: selectcolorchannel.h
include/colorspaces/: AbstractColorSpace.h  CMYColorSpace.h  HSLColorSpace.h  HSVColorSpace.h  YCbCr_601ColorSpace.h  YCbCr_709ColorSpace.h  YCoCgColorSpace.h  sRGBColorSpace.h
include/dithering/: AbstractDithering.h  AtkinsonDithering.h  BordersController.h  DitheringEnum.h  DitheringMethodFactory.h  FloydSteinbergDithering.h  NearestColor.h  Ordered8x8Dithering.h  RandomDithering.h
include/file/: AbstractFile.h  FileFormat.h  FileFormatType.h  FileImageInfo.h  FileOpenDecider.h  Png.h  PngFilters.h  Pnm.h
include/filtration/: AbstractFiltering.h  BoxBlurFiltering.h  CASFiltering.h  FilterConfiguration.h  FiltrationEnum.h  FiltrationFabricMethod.h  GaussianFiltering.h  GaussianGilter.h  MedianFiltering.h  OtsuThresholdFiltering.h  SobelFiltering.h  ThresholdFiltering.h
include/gamma/: GammaCorrection.h
include/gradient/: Gradient.h
include/interpolations/: AbstractInterpolation.h  BCSplinesInterpolation.h  BilinearInterpolation.h  InterpolatinFabricMethod.h  InterpolationEnum.h  LanczosInterpolation.h  NearestNeighbourInterpolation.h
include/line/: AbstractDrawLine.h  DrawColoredLine.h
include/pixels/: ColorChannelEnum.h  ColorSpaceEnum.h  Pixels.h  PnmFormat.h
include/pnm/: Pnm.h
include/qimagewidget/: QImageWidget.h
include/qinterface/: QAssignGammaWindow.h  QBCSplineWindow.h  QChangeColorspaceWindow.h  QChooseImageDialog.h  QConvertGammaWindow.h  QDitheringParametersWindow.h  QDrawLineWindow.h  QGradientGenerationWindow.h  QImageScalingWindow.h  QInterface.h  QLineParametersSelectionWindow.h  QMain.h  QMainWindow.h  QOpenPictureWindow.h  QSavePictureWindow.h
include/qinterface/filtrationwindows/: QContrastAdaptiveSharpeningFiltrationWindow.h  QGaussianFiltrationWindow.h  QLinearAveragingFiltrationWindow.h  QMedianFiltrationWindow.h  QTresholdFiltrationWindow.h  QСontrastAdaptiveSharpeningFiltrationWindow.h
src/app/: main.cpp
src/colorchannels/: selectcolorchannel.cpp
src/colorspaces/: CMYColorSpace.cpp  HSLColorSpace.cpp  HSVColorSpace.cpp  YCbCr_601ColorSpace.cpp  YCbCr_709ColorSpace.cpp  YCoCgColorSpace.cpp  sRGBColorSpace.cpp
src/dithering/: AtkinsonDithering.cpp  BordersController.cpp  DitheringMethodFactory.cpp  FloydSteinbergDithering.cpp  NearestColor.cpp  Ordered8x8Dithering.cpp  RandomDithering.cpp
src/file/: FileOpenDecider.cpp  Png.cpp  PngFilters.cpp  Pnm.cpp
src/filtration/: BoxBlurFiltering.cpp  CASFiltering.cpp  FiltrationFabricMethod.cpp  GaussianFiltering.cpp  MedianFiltering.cpp  OtsuThresholdFiltering.cpp  SobelFiltering.cpp  ThresholdFiltering.cpp
src/gamma/: GammaCorrection.cpp
src/gradient/: Gradient.cpp
src/interpolations/: BCSplinesInterpolation.cpp  BilinearInterpolation.cpp  InterpolationFabricMethod.cpp  LanczosInterpolation.cpp  NearestNeighbourInterpolation.cpp
src/line/: DrawColoredLine.cpp
src/pixels/: ColorSpaceEnum.cpp  Pixels.cpp
src/pnm/: Pnm.cpp
src/qimagewidget/: QImageWidget.cpp
src/qinterface/: QAssignGammaWindow.cpp  QBCSplineWindow.cpp  QChangeColorspaceWindow.cpp  QChooseImageDialog.cpp  QConvertGammaWindow.cpp  QDitheringParametersWindow.cpp  QDrawLineWindow.cpp  QGradientGenerationWindow.cpp  QImageScalingWindow.cpp  QInterface.cpp  QLineParametersSelectionWindow.cpp  QMain.cpp  QMainWindow.cpp  QOpenPictureWindow.cpp  QSavePictureWindow.cpp
src/qinterface/filtrationwindows/: QContrastAdaptiveSharpeningFiltrationWindow.cpp  QGaussianFiltrationWindow.cpp  QLinearAveragingFiltrationWindow.cpp  QMedianFiltrationWindow.cpp  QTresholdFiltrationWindow.cpp  QСontrastAdaptiveSharpeningFiltrationWindow.cpp
